@@ -1,8 +1,10 @@
 package com.mycompany.furniture;
 
-import javax.persistence.Column;
 import javax.persistence.DiscriminatorValue;
 import javax.persistence.Entity;
+
+import me.prettyprint.hom.annotations.Column;
+import me.prettyprint.hom.converters.VariableIntegerConverter;
 
 @Entity
 @DiscriminatorValue("couch")
@@ -11,7 +13,7 @@ public class Couch extends Furniture {
   @Column(name="foldOutBed")
   private boolean foldOutBed;
 
-  @Column(name="numCushions")
+  @Column(name="numCushions", converter=VariableIntegerConverter.class)
   private int numCushions;
 
   public boolean isFoldOutBed() {
